<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Day Counter</string>
    <string name="days_since">days</string>
    <string name="days_left">days left</string>
    <string name="no_data">-</string>
    <string name="enter_title">(Tap here to edit title)</string>
    <string name="ok">OK</string>
    <string name="what">What</string>
    <string name="edit">Edit</string>
    <string name="language_settings">Language Settings</string>
    <string name="sample_widget_title">event title</string>
    <string name="date">Date</string>
    <string name="edit_your_day_counter">Edit Your Day Counter</string>
    <string name="select_header_style">Select Header Style</string>
    <string name="select_body_style">Select Body Style</string>

    <string name="count_day">Day</string>
    <string name="count_week">Week</string>
    <string name="count_month">Month</string>
    <string name="count_year">Year</string>

    <plurals name="list_day_left">
        <item quantity="one">%d day left</item>
        <item quantity="other">%d days left</item>
    </plurals>

    <plurals name="list_day_since">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="list_week_left">
        <item quantity="one">%d week left</item>
        <item quantity="other">%d weeks left</item>
    </plurals>

    <plurals name="list_week_since">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>

    <plurals name="list_month_left">
        <item quantity="one">%d month left</item>
        <item quantity="other">%d months left</item>
    </plurals>

    <plurals name="list_month_since">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>

    <plurals name="list_year_left">
        <item quantity="one">%d year left</item>
        <item quantity="other">%d years left</item>
    </plurals>

    <plurals name="list_year_since">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>

    <plurals name="widget_day_left">
        <item quantity="one">%d\nday left</item>
        <item quantity="other">%d\ndays left</item>
    </plurals>

    <plurals name="widget_day_since">
        <item quantity="one">%d\nday</item>
        <item quantity="other">%d\ndays</item>
    </plurals>

    <plurals name="widget_week_left">
        <item quantity="one">%d\nweek left</item>
        <item quantity="other">%d\nweeks left</item>
    </plurals>

    <plurals name="widget_week_since">
        <item quantity="one">%d\nweek</item>
        <item quantity="other">%d\nweeks</item>
    </plurals>

    <plurals name="widget_month_left">
        <item quantity="one">%d\nmonth left</item>
        <item quantity="other">%d\nmonths left</item>
    </plurals>

    <plurals name="widget_month_since">
        <item quantity="one">%d\nmonth</item>
        <item quantity="other">%d\nmonths</item>
    </plurals>

    <plurals name="widget_year_left">
        <item quantity="one">%d\nyear left</item>
        <item quantity="other">%d\nyears left</item>
    </plurals>

    <plurals name="widget_year_since">
        <item quantity="one">%d\nyear</item>
        <item quantity="other">%d\nyears</item>
    </plurals>

    <string name="add_widget_instruction">No Widgets added to the Home Screen. \nGo to Home Screen > Add Widget > select \"Day Counter\" to add the widget.</string>

    <string name="english">English</string>
    <string name="chinese">繁體中文</string>
    <string name="chinese_sim">简体中文</string>
    <string name="japanese">日本語</string>
    <string name="french">Français</string>
    <string name="turkish">Türkçe</string>

</resources>
