<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/language_settings"
        app:titleTextColor="@android:color/white" />

    <RadioGroup
        android:id="@+id/language_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/p1"
            android:text="@string/english"
            android:textColor="@color/common_text_gray"
            android:textSize="@dimen/language_text_size" />

        <RadioButton
            android:id="@+id/chinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/p1"
            android:text="@string/chinese"
            android:textColor="@color/common_text_gray"
            android:textSize="@dimen/language_text_size" />

        <RadioButton
            android:id="@+id/chinese_sim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/p1"
            android:text="@string/chinese_sim"
            android:textColor="@color/common_text_gray"
            android:textSize="@dimen/language_text_size" />

        <RadioButton
            android:id="@+id/japanese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/japanese"
            android:textColor="@color/common_text_gray"
            android:textSize="@dimen/language_text_size" />

        <RadioButton
            android:id="@+id/french"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/p1"
            android:text="@string/french"
            android:textColor="@color/common_text_gray"
            android:textSize="@dimen/language_text_size" />

        <RadioButton
            android:id="@+id/turkish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/p1"
            android:text="@string/turkish"
            android:textColor="@color/common_text_gray"
            android:textSize="@dimen/language_text_size" />

    </RadioGroup>

</LinearLayout>