<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#DDDDDD">

    <DatePicker
        android:id="@+id/set_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:background="#F5F1DE"
        android:calendarViewShown="false"/>

    <LinearLayout
        android:id="@+id/row_title"
        style="@style/ItemRow"
        android:layout_below="@+id/set_picker">

        <TextView
            style="@style/TextTitle"
            android:text="@string/what"/>

        <EditText
            android:id="@+id/set_edt_title"
            style="@style/TextContent"
            android:hint="@string/enter_title"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColorHint="#FFFFFF"/>

    </LinearLayout>

    <Button
        android:id="@+id/set_btn_ok"
        style="@style/ButtonConfirm"
        android:layout_alignParentBottom="true"
        android:text="@string/ok"/>

</RelativeLayout>
